csl-2974 fix image container overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -183,6 +183,7 @@
   height: var(--container-image-small-height); /* Fixed height for layout shifts */
   display: flex;
   align-self: stretch;
+  overflow: hidden;
 }
 
 /* Input */
@@ -717,11 +718,6 @@
     flex-basis: 50%;
     flex-shrink: 0;
     border-radius: 4px;
-  }
-
-  /* Image */
-  .cio-quiz .cio-question-image {
-    height: auto;
   }
 
   /* Cover Page Component */
